// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <GifGrid/> Should show correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flash"
  >
    One punch man
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test in <GifGrid/> should show the items when the images have been loaded useFecthGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flash"
  >
    One punch man
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Any thing"
      url="https://localhost/img.jpg"
    />
  </div>
</Fragment>
`;
